# nfl-fourthdown

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  FOLDER_STRUCTURE.md  LICENSE  README.md  app.py  main.py  pyproject.toml
backend/: README.md  requirements.txt
backend/app/: main.py
notebooks/: Cleaning_and_EDA.ipynb  EDA.ipynb  model.ipynb
notebooks/artifacts_coach/: coach_policy.best.weights.h5  coach_policy.last.weights.h5  feature_meta.json  preprocess.joblib  preprocess_feature_names.json
notebooks/artifacts_comp/: comp_multitask.best.weights.h5  comp_multitask.last.weights.h5  feature_meta.json  preprocess.joblib  preprocess_feature_names.json
notebooks/artifacts_wp/: feature_meta.json  preprocess.joblib  preprocess_feature_names.json  wp_multitask.best.weights.h5  wp_multitask.last.weights.h5
src/data/: 01_pbp_download.py  02_nfl4th_extract.py  03_4th_down.py
web/: README.md  package.json  tsconfig.json  types.ts
web/app/: layout.tsx  page.tsx
