[project]
name = "nfl-fourthdown"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "lightgbm>=4.6.0",
    "matplotlib>=3.9.4",
    "nfl-data-py>=0.3.3",
    "numpy>=1.26.4",
    "pandas>=1.5.3",
    "pyarrow>=21.0.0",
    "rpy2>=3.6.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "tensorflow>=2.18.1",
]
